# STM32F407VET6

./: .clang-format  .gitignore  CMakeLists.txt  Log.md  README.md  STM32F407VETX_FLASH.ld  stlink.cfg  解决开梯子后仍超时的奇技淫巧.bat
Adapter/GUI/lvgl-simulator/: CMakeLists.txt  common_functions.cmake  main.cpp  test.cpp
Adapter/GUI/lvgl-simulator/Drivers/: simulator.cpp  simulator.hpp
Adapter/GUI/lvgl-simulator/SDL2/i686-w64-mingw32/lib/: libSDL2_test.la  libSDL2main.la
Adapter/GUI/lvgl-simulator/SDL2/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake
Adapter/GUI/lvgl-simulator/SDL2/i686-w64-mingw32/lib/pkgconfig/: sdl2.pc
Adapter/GUI/lvgl-simulator/SDL2/x86_64-w64-mingw32/lib/: libSDL2_test.la
BSP/: CMakeLists.txt  bsp_config.h.in  bsp_drivers.cmake  cmsis_hal.cmake  core.cmake  stm32f4xx_hal_conf.h.in
BSP/ADC/: adc.c  adc.h
BSP/Base/: CPU_RunTime.c  CPU_RunTime.h  FreeRTOSConfig.h  baseInit.c  baseInit.cpp  baseInit.h  stm32f4xx_hal_conf.h  stm32f4xx_it.c
BSP/DAC/: dac.c  dac.h
BSP/Key/: key_exit.c  key_exit.h
BSP/LCD/: fsmc.c  fsmc.h  lcd.c  lcd.h
BSP/SPI_Flash/: spi.c  spi.h  w25qxx.c  w25qxx.h
BSP/Timer/: timer.c  timer.h
BSP/inc/: CPU_RunTime.h  RCC.h  RNG.h  adc.h  baseInit.h  bsp_config.h.in  cpu_runtime.h  dac.h  debug.h  delay.h  esp8266.h  fatfs.h  fsmc.h  i2c.h  key_exit.h  lcd.h  mqtt.h  pwr.h  rcc.h  sd_spi.h  sdio.h  spi.h  tcp.h  timer.h  touch.h  usart.h  w25qxx.h
BSP/src/: CPU_RunTime.c  RCC.c  RNG.c  adc.c  baseInit.c  cpu_runtime.c  dac.c  debug.c  delay.c  esp8266.c  fatfs.c  fsmc.c  i2c.c  key_exit.c  lcd.c  mqtt.c  pwr.c  rcc.c  rng.c  sd_spi.c  sdio.c  spi.c  tcp.c  timer.c  touch.c  usart.c  w25qxx.c
GUI/lvgl-simulator/: CMakeLists.txt  decoder.h  lv_conf.h  lv_conf_ext.h  lv_drv_conf.h  lv_ex_conf.h  main.c  main.cpp
GUI/lvgl-simulator/Drivers/: simulator.cpp  simulator.hpp
GUI/lvgl-simulator/SDL2/i686-w64-mingw32/include/SDL2/: SDL_assert.h  SDL_blendmode.h  SDL_config.h  SDL_events.h  SDL_haptic.h  SDL_hints.h  SDL_keycode.h  SDL_opengl.h  SDL_test_common.h  SDL_test_fuzzer.h  SDL_timer.h  SDL_video.h
GUI/lvgl-simulator/SDL2/i686-w64-mingw32/lib/: libSDL2.la
GUI/lvgl-simulator/SDL2/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
GUI/lvgl-simulator/SDL2/include/SDL2/: SDL_egl.h  SDL_events.h  SDL_hints.h  SDL_opengl_glext.h  SDL_quit.h  SDL_stdinc.h  SDL_surface.h  SDL_syswm.h  SDL_test_harness.h
GUI/lvgl-simulator/SDL2/x86_64-w64-mingw32/lib/: libSDL2.la  libSDL2main.la
GUI/lvgl-simulator/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
GUI/lvgl-simulator/SDL2/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
GUI/lvgl-simulator/gg_external_data/: gg_external_data.c  gg_external_data.h
GUI/lvgl-simulator/gg_external_data/freemaster/: connect_utils.c  connect_utils.h  freemaster_client.c  freemaster_client.h
GUI/lvgl-simulator/lv_drivers/display/: monitor.c  monitor.h
GUI/lvgl-simulator/lv_drivers/indev/: keyboard.c  keyboard.h
GUI/lvgl-simulator/lvgl/: lv_conf.h
GUI/lvgl-simulator/lvgl/examples/porting/: lv_port_disp.c
GUI/lvgl-simulator/resource/lvgl/env_support/cmake/: custom.cmake
GUI/lvgl-simulator/resource/lvgl/src/: lv_conf_internal.h
GUI/lvgl-simulator/resource/lvgl/src/core/: lv_disp.c  lv_disp.h  lv_event.c  lv_event.h  lv_indev.h  lv_obj.c  lv_obj.h  lv_obj_pos.h  lv_refr.c  lv_refr.h  lv_theme.h
GUI/lvgl-simulator/resource/lvgl/src/draw/: lv_draw_mask.c  lv_draw_mask.h  lv_img_buf.h  lv_img_decoder.h
GUI/lvgl-simulator/resource/lvgl/src/draw/stm32_dma2d/: lv_gpu_stm32_dma2d.c
GUI/lvgl-simulator/resource/lvgl/src/extra/: lv_extra.c
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/ffmpeg/: lv_ffmpeg.c  lv_ffmpeg.h
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/fsdrv/: lv_fs_rawfs.c
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/gif/: lv_gif.c  lv_gif.h
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/png/: lodepng.c  lodepng.h
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/qrcode/: qrcodegen.h
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/rlottie/: lv_rlottie.c
GUI/lvgl-simulator/resource/lvgl/src/extra/libs/sjpg/: lv_sjpg.c
GUI/lvgl-simulator/resource/lvgl/src/extra/others/monkey/: lv_monkey.c
GUI/lvgl-simulator/resource/lvgl/src/extra/others/snapshot/: lv_snapshot.c  lv_snapshot.h
GUI/lvgl-simulator/resource/lvgl/src/extra/themes/default/: lv_theme_default.c
GUI/lvgl-simulator/resource/lvgl/src/extra/widgets/: lv_widgets.h
GUI/lvgl-simulator/resource/lvgl/src/extra/widgets/analogclock/: lv_analogclock.c  lv_analogclock.h
GUI/lvgl-simulator/resource/lvgl/src/extra/widgets/animimg/: lv_animimg.h
GUI/lvgl-simulator/resource/lvgl/src/extra/widgets/carousel/: lv_carousel.c  lv_carousel.h
GUI/lvgl-simulator/resource/lvgl/src/extra/widgets/dclock/: lv_dclock.h
GUI/lvgl-simulator/resource/lvgl/src/extra/widgets/keyboard/: chinese_library.h  lv_keyboard.c  (+3 more)
GUI/lvgl-simulator/resource/lvgl/src/font/: lv_font.h  lv_font_dejavu_16_persian_hebrew.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c  lv_font_simsun_16_cjk.c  lv_font_unscii_16.c  lv_font_unscii_8.c  lv_symbol_def.h
GUI/lvgl-simulator/resource/lvgl/src/hal/: lv_hal_disp.c  lv_hal_disp.h  lv_hal_indev.c  lv_hal_indev.h
GUI/lvgl-simulator/resource/lvgl/src/misc/: lv_anim.c  lv_anim.h  lv_async.c  lv_async.h  lv_log.c  lv_log.h  lv_style.c  lv_style.h  lv_timer.c  lv_timer.h
GUI/lvgl-simulator/resource/lvgl/src/widgets/: lv_slider.c  lv_slider.h  lv_table.c
GUI/lvgl-simulator/rlottie/: rlottiecommon.h
GUI/lvgl-simulator/wels/: codec_ver.h
(+377 files in other folders)
